@@ -1,9 +1,18 @@
 Revision history for Perl extension Net::SSLeay.
 
+???
+	Patch from Alexander Bluhm to enable RSA_get_key_parameters with
+	LibreSSL. Again.
+	Fixed memory leak in X509_get_subjectAltNames. Reported and patched by Jim Westfall.
+	Added . to lib path in Makefile.PL to accommodate people who are using a perl with -Ddefault_inc_excludes_dot.
+	Fixed build failure if engine support not present. Patch from Paul Green.
+	Improvements to  get_my_thread_id to work around possibility of ERRSV not being defined eg on OpenWRT.
+	
 1.80	 2017-01-05
 	 Patch from Steffen Ulrich that fixed unexpected changes in the
 	 control flow of the Perl program which seemed to be triggered by the
 	 ticket key callback. Thanks Steffen.
+
 1.79	 2017-01-03
 	Patch to fix a few inline variable declarations that cause errors for
 	older compilers. From Andy Grundman. Thanks.
